# hallassistant

./: BUGS  README.md  assistant_manager.py  demo1.py  demo1a.py  demo1b.py  demo1c.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6a.py  demo_pt.py  demo_travel_assistant.py  demo_travel_assistant_dst.py  key.env  setup.cfg  st_demo.py  util.py  weather.py
openai_assistants_demos/: assistant_manager.py  demo1a.py  demo1b.py  demo1c.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  demo6a.py  demo_travel_assistant.py  demo_travel_assistant_dst.py  registry.py  util.py
openai_assistants_demos/assistants/: README.txt
openai_assistants_demos/scripts/: delete_all_assistants.py  make_assistants.py
