[metadata]
name = openai_assistants_demos
version = attr: openai_assistants_demos.__version__
author = Chris Brew
author_email = christopher.brew@lexisnexis.com
description = A package of AI demos
long_description = file: README.md
long_description_content_type = text/markdown
keywords = openai assistants, setuptools
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    PyYAML >= 6.0
    openai
    typer
    python-dotenv
    streamlit

[options.entry_points]
console_scripts =
    delete_oaia_assistants = openai_assistants_demos.scripts.delete_assistants:main

[options.extras_require]
dev =
    black==22.1.0
    flake8==4.0.1

[options.package_data]
openai_assistants_demos = data/schema.json, *.txt
* = README.md